# taxi_predict

./: .env  pyproject.toml
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml
models/: model.pkl
notebooks/: 01_load_validate_raw_data copy.ipynb  01_load_validate_raw_data.ipynb  02_transform_raw_to_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets copy.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_vizualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightbm_with_feature_engineering.ipynb  10_lightbm_model_with_hyperparameters.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
src/: config.py  data.py  data_split.py  feature_store_api.py  frontend.py  frontend_monitoring.py  frontend_new.py  inference.py  model.py  monitoring.py  paths.py
