[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["petriknovis <dpetrik@novis.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
geopandas = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
